# screen-share

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.codex/: README.md
agents/: adaptation.md  av-sync.md  lan-discovery.md  live-pipeline.md  nat-traversal.md  packaging.md  performance.csv  performance.md  project-memory.md  receiver-ux.md  repo-map.md  security.md  signaling.md  todo.md  ui.md
assets/: README.md
cmake/: PackagePortable.cmake  RunWindeployQt.cmake
docs/: controller-support.md  release.md  update-signing.md  usage.md
installer/: ScreenShare-installed.marker  ScreenShare.iss.in
scripts/: create-update-manifest.ps1  fetch-controller-runtime.ps1  install-dev-deps.ps1  new-update-signing-key.ps1  run-multiviewer-harness.ps1  sign-update-manifest.ps1
signaling-worker/: README.md  package-lock.json  package.json  wrangler.toml
signaling-worker/src/: index.ts
src/: DesktopCapturer.cpp  H264FileEncoder.cpp  H264FileEncoder.h  H264StreamDecoder.cpp  H264StreamDecoder.h  H264StreamEncoder.cpp  H264StreamEncoder.h  UdpProtocol.h  UdpReceiver.cpp  UdpReceiver.h  UdpSender.cpp  UdpSender.h  main.cpp
src/api/: ScreenShareAPI.cpp  ScreenShareAPI.h
src/app/: AppSessionBackend.cpp  AppSessionBackend.h  InProcessSessionBackend.cpp  InProcessSessionBackend.h  ScreenShareApp.cpp  ScreenShareApp.h  ScreenShareAppInternal.h  ScreenShareMain.cpp  ScreenShareRunContext.h  ScreenShareSessionRunner.cpp  ScreenShareSessionRunner.h  main.cpp
src/audio/: OpusCodec.cpp  OpusCodec.h  WasapiCapture.cpp  WasapiCapture.h  WasapiRenderer.cpp  WasapiRenderer.h
src/capture/: DesktopCapturer.cpp  DesktopCapturer.h
src/cli/: ScreenShareCLI.cpp  ScreenShareCLI.h  ScreenShareMain.cpp
src/codec/: H264Bitstream.cpp  H264Bitstream.h  H264EncoderProbe.cpp  H264EncoderProbe.h  H264FileEncoder.cpp  H264FileEncoder.h  H264StreamDecoder.cpp  H264StreamDecoder.h  H264StreamEncoder.cpp  H264StreamEncoder.h
src/core/: ScreenShareSession.cpp  ScreenShareSession.h  SessionBackend.cpp  SessionBackend.h  SessionCommand.cpp  SessionCommand.h  SessionRuntimeControl.cpp  SessionRuntimeControl.h
src/input/: RemoteInputInjector.cpp  RemoteInputInjector.h  ViewerGamepad.cpp  ViewerGamepad.h  VirtualGamepadBackend.cpp  VirtualGamepadBackend.h  XInputGamepad.cpp  XInputGamepad.h
src/render/: Nv12D3D11Presenter.cpp  Nv12D3D11Presenter.h  ReceiverPreviewWindow.cpp  ReceiverPreviewWindow.h
src/runtime/: AvSyncDiagnostics.h  DiagnosticParsing.h  ScreenShareRunContext.h  ScreenShareRuntimeExecution.cpp  ScreenShareRuntimeInternal.h  ScreenShareRuntimeOptions.h  ScreenShareRuntimeSupport.cpp  ScreenShareRuntimeSupport.h  ScreenShareSessionOptions.cpp  ScreenShareSessionOptions.h  ScreenShareSessionRunner.cpp  ScreenShareSessionRunner.h
src/transport/: LanDiscovery.cpp  LanDiscovery.h  NatTraversal.cpp  NatTraversal.h  SignalingClient.cpp  SignalingClient.h  StunClient.cpp  StunClient.h  UdpCrypto.cpp  UdpCrypto.h  UdpProtocol.cpp  UdpProtocol.h  UdpReceiver.cpp  UdpReceiver.h  UdpSender.cpp  UdpSender.h
src/ui/: ActiveShareWindow.cpp  ActiveShareWindow.h  ActiveWatchWindow.cpp  ActiveWatchWindow.h  AppShellWindow.cpp  AppShellWindow.h  CreateRoomWindow.cpp  CreateRoomWindow.h  HomeWindow.cpp  HomeWindow.h  JoinRoomWindow.cpp  JoinRoomWindow.h  ProcessSessionBackend.cpp  ProcessSessionBackend.h  QtSessionBackend.cpp  QtSessionBackend.h  RoomAccessCheck.cpp  RoomAccessCheck.h  ScreenAwakeGuard.cpp  ScreenAwakeGuard.h  ScreenShareUiIcon.rc.in  ShareSessionUiState.h  Toast.cpp  Toast.h  UiReportPath.cpp  UiReportPath.h  UiStyle.cpp  UiStyle.h  UpdateManager.cpp  UpdateManager.h  UpdatePackageSelection.cpp  UpdatePackageSelection.h  VideoFrameWidget.cpp  VideoFrameWidget.h  WatchSessionUiState.h  main.cpp  resources.qrc
src/updater/: ScreenShareUpdater.cpp  UpdateSignature.cpp  UpdateSignature.h
src/video/: Nv12Convert.cpp  Nv12Convert.h
tests/: AvSyncDiagnosticsTests.cpp  ControllerProtocolTests.cpp  UdpSenderPacingTests.cpp  UiReportPathTests.cpp  UpdateManifestScriptTests.ps1  UpdatePackageSelectionTests.cpp  VideoFrameInputTests.cpp  ViewerGamepadReportTests.cpp
